--- a/JAVAWEB/WebContent/css/stylehome.css
+++ b/JAVAWEB/WebContent/css/stylehome.css
@@ -8,25 +8,8 @@ body{
 .header{
 	height: 400px;
 }
-.navbar{
-	background-color: #30333C;
-}
-.navbar a{
-	float: left;
-	display: block;
-	color: #f2f2f2;	
-	text-decoration: none;	
-}
-.navbar a:hover{
-	color: red;
-	font-weight: bold;	
-}
-.footer{
-	background-color: black;
-	color: white;
-	padding-top: 20px;
-	padding-bottom: 20px;
-}
+
+
 .card {
   position: relative;
   display: flex;
@@ -141,3 +124,7 @@ body{
   border-top-right-radius: calc(0.25rem - 1px);
 }
 
+/* ------------------------------menu------------------------------------- */
+
+
+/* ----------------------------------------------------------------------- */
